--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,15 @@
 body {
     margin: 60px auto;
-    width: 100%;
+    width: 70%;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
+}
+div {
+    height: 500px;
 }
 nav ul li, footer ul li {
     display: inline;
