--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ nav ul, footer ul {
     font-weight: bold;
 }
 div {
-    height: 500px;
+   max-height: 1200px;
 }
 nav ul li, footer ul li {
     display: inline;
