--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/resume">Resume</a></li>
+	        	<p><a href="resume.pdf" target="_blank">Resume Download</p>
+	        	<li><a href="/resume">Resume</a></li>
     		</ul>
 		</nav>
 		<div class="container">
