--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-	        	<li></li><a href="resume.pdf" target="_blank">Resume Download</li>
+	        	<li></li><a href="resume.pdf" target="_blank">Resume</li>
 	        </ul>
 		</nav>
 		<div class="container">
