--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:minarc@oregonstate.edu">minarc@oregonstate.edu</a></li>
-        		<li><a href="https://github.com/chrisminar">github</a></li>
-        		<li><a href="https://www.linkedin.com/in/ChristopherMinar">Linkedin</a></li>
+        		<li><a href="https://github.com/chrisminar" target="_blank">github</a></li>
+        		<li><a href="https://www.linkedin.com/in/ChristopherMinar" target="_blank">Linkedin</a></li>
 			</ul>
 		</footer>
 	</body>
