--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
 	        	<li><a href="resume.pdf" target="_blank">Resume</a></li>
+	        	<li><a href="/game" target="_blank">A Sweet Game</a></li>
 	        </ul>
 		</nav>
 		<div class="container">
